--- a/profapp/static/tinymce.pr/plugins/tinymce-gallery-plugin/image_gallery.less
+++ b/profapp/static/tinymce.pr/plugins/tinymce-gallery-plugin/image_gallery.less
@@ -43,41 +43,9 @@
   }
 }
 
-#image-gallery-preview {
-  display: inline-block;
-  position: absolute;
-}
-
-#image-gallery-preview img {
-  margin: 0px;
-  padding: 0px;
+img.data-mce-image-gallery-placeholder {
   background-size: contain;
+  background-position: center;
   background-repeat: no-repeat;
-}
-
-.image-gallery .gallery-title {
-  text-align: center;
-  font-weight: bold;
-}
-
-image-gallery {
-  display: inline-block;
-  background-color: #00BBA1;
-}
-
-image-gallery-img {
-  display: block;
-  background-color: red;
-}
-
-image-gallery-title {
-  display: block;
-  background-color: #0c65a5;
-  -webkit-user-select: none; /* Chrome/Safari */
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* IE10+ */
-
-  /* Rules below not implemented in browsers yet */
-  -o-user-select: none;
-  user-select: none;
+  border: dotted #00BBA1 1px;
 }
