--- a/profapp/templates/front/Forester/company_contacts.html
+++ b/profapp/templates/front/Forester/company_contacts.html
@@ -10,8 +10,8 @@
                     center: new google.maps.LatLng({{ member_company['lat'] }}, {{ member_company['lon'] }}),
                     zoom: 15,
                     mapTypeId: google.maps.MapTypeId.ROADMAP
-                }
-                var map = new google.maps.Map(mapCanvas, mapOptions)
+                };
+                var map = new google.maps.Map(mapCanvas, mapOptions);
 
                 var marker = new google.maps.Marker({
                     position: {'lat': {{ member_company['lat'] }}, 'lng': {{ member_company['lon'] }}},
@@ -29,7 +29,7 @@
         <hr class="contacts-divider">
             {% for employment in member_company.employments if employment['status'] == 'EMPLOYMENT_ACTIVE' %}
                 <div class="contact col-md-4">
-                    <a class="contact-userpic" href="#"><img class="img-circle" src="{{ employment.user['avatar']['url'] }}"></a>
+                    <a class="contact-userpic" href="#"><img src="{{ employment.user['avatar']['url'] }}"></a>
                     <a href="#"><h6 class="contact-name">{{ employment.user['full_name'] }}</h6></a>
                     {% if employment['position'] %}{{ employment['position'] }}{% endif %}
                     <a class="message" onclick="openMessageDialog('{{ employment.user['id'] }}', '{{ employment.user['full_name'] }}')" data-user-id="{{ employment.user['id'] }}" href="#">
