--- a/profapp/templates/front/Forester/layout.html
+++ b/profapp/templates/front/Forester/layout.html
@@ -44,7 +44,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
     <script src="{{ static_address('front/' + portal.layout.name + '/js/bootstrap.min.js') }}"></script>
     <script src="{{ static_address('front/' + portal.layout.name + '/js/jasny-bootstrap.min.js') }}"></script>
-    <script src="{{ static_address('front/' + portal.layout.name + '/js/clamp.min.js') }}"></script>
+    <script src="{{ static_address('front/' + portal.layout.name + '/js/jquery.dotdotdot.min.js') }}"></script>
     <script src="{{ static_address('front/' + portal.layout.name + '/js/custom.js') }}"></script>
     <script>
         window.addEventListener("message", function (messageevent) {
