--- a/profapp/templates/front/Forester/footer.html
+++ b/profapp/templates/front/Forester/footer.html
@@ -6,6 +6,6 @@
             <a class="social-btn" href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
         </div>-->
         {{ portal.advs['body_end']|safe }}
-        <div class="pr pull-right">Powered by <a class="pr-link" href="#"><b>Profireader</b></a></div>
+        <div class="pr pull-right">Powered by <a class="pr-link" target="_blank" href="https://profireader.com/"><b>Profireader</b></a></div>
     </div>
 </footer>
