--- a/profapp/templates/front/Forester/header.html
+++ b/profapp/templates/front/Forester/header.html
@@ -10,7 +10,7 @@
             <!--Collapsive navbar toggle button-->
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapsible">
                 <span class="sr-only">Toggle navigation</span>
-                <i class="fa fa-bars" aria-hidden="true"></i>
+                Меню
             </button>
             {% endif %}
             <a class="navbar-brand" href="/" style="width: 200px; "><img class="img-responsive bg-contain" src="{{ portal.logo.url }}"></a>
