--- a/profapp/templates/front/Forester/layout_company_page.html
+++ b/profapp/templates/front/Forester/layout_company_page.html
@@ -7,14 +7,14 @@
     {% include 'company_menu.html' %}
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-lg-10">
+            <div class="col-xs-12 col-md-9">
                 <div class="clearfix">
                     <main role="main">
                             {% block company_content %}{% endblock %}
                     </main>
                 </div>
             </div>
-            <aside class="col-xs-12 col-lg-2">
+            <aside class="col-xs-12 col-md-3">
                 {% include 'right_banners.html' %}
             </aside>
         </div>
