--- a/profapp/static/tinymce.pr/plugins/tinymce-gallery-plugin/image_gallery.css
+++ b/profapp/static/tinymce.pr/plugins/tinymce-gallery-plugin/image_gallery.css
@@ -1,18 +1,15 @@
-.mce-sortable-images {
-  background-color: #0c65a5;
-}
-.mce-sortable-images .ul-sortable-images {
+.mce-pr-image-gallery-dialog .mce-pr-sortable-images ul {
   height: 350px;
   overflow: auto;
 }
-.mce-sortable-images .ul-sortable-images li {
+.mce-pr-image-gallery-dialog .mce-pr-sortable-images ul li {
   list-style-type: none;
   margin: 5px;
 }
-.mce-sortable-images .ul-sortable-images li > * {
+.mce-pr-image-gallery-dialog .mce-pr-sortable-images ul li > * {
   margin: 3px;
 }
-.mce-sortable-images .ul-sortable-images li img.pr-gallery-image-preview {
+.mce-pr-image-gallery-dialog .mce-pr-sortable-images ul li img.pr-gallery-item-preview {
   width: 4em;
   height: 2.2em;
   background-position: center;
@@ -20,21 +17,52 @@
   background-size: contain;
   cursor: ns-resize;
 }
-.mce-sortable-images .ul-sortable-images li input.pr-gallery-image-title {
+.mce-pr-image-gallery-dialog .mce-pr-sortable-images ul li input.pr-gallery-item-title {
   width: 15em;
 }
-.mce-sortable-images .ul-sortable-images li input.pr-gallery-image-copyright {
+.mce-pr-image-gallery-dialog .mce-pr-sortable-images ul li input.pr-gallery-item-copyright {
   width: 7em;
 }
-.mce-sortable-images .ul-sortable-images li button.pr-gallery-image-remove-undo {
+.mce-pr-image-gallery-dialog .mce-pr-sortable-images ul li button.pr-gallery-item-remove-undo {
   height: 100%;
   width: 4em;
 }
-.mce-sortable-images div input[type=file] {
+.mce-pr-image-gallery-dialog .mce-pr-sortable-images div input[type=file] {
   width: 1px;
   height: 1px;
   position: absolute;
   visibility: hidden;
+}
+.mce-pr-image-gallery-dialog .pr-image-gallery-dialog-dimmed {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #eee;
+  opacity: 0.8;
+  z-index: 1001;
+  width: 100%;
+  height: 100%;
+}
+.mce-pr-image-gallery-dialog .pr-image-gallery-dialog-dimmed-text {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: transparent;
+  z-index: 1002;
+  width: 100%;
+  height: 100%;
+  display: table;
+}
+.mce-pr-image-gallery-dialog .pr-image-gallery-dialog-dimmed-text span {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+  line-height: normal;
+  white-space: normal;
 }
 img.data-mce-image-gallery-placeholder {
   background-size: contain;
