--- a/profapp/static/tinymce.pr/plugins/tinymce-gallery-plugin/image_gallery.less
+++ b/profapp/static/tinymce.pr/plugins/tinymce-gallery-plugin/image_gallery.less
@@ -1,45 +1,77 @@
+.mce-pr-image-gallery-dialog {
+  .mce-pr-sortable-images {
+    ul {
+      height: 350px;
+      overflow: auto;
+      li {
+        list-style-type: none;
+        margin: 5px;
+        > * {
+          margin: 3px;
+        }
 
-.mce-sortable-images {
-  background-color: #0c65a5;
+        img.pr-gallery-item-preview {
+          width: 4em;
+          height: 2.2em;
+          background-position: center;
+          background-repeat: no-repeat;
+          background-size: contain;
+          cursor: ns-resize;
+        }
 
-  .ul-sortable-images {
-    height: 350px;
-    overflow: auto;
-    li {
-      list-style-type: none;
-      margin: 5px;
-      > * {
-        margin: 3px;
-      }
+        input.pr-gallery-item-title {
+          width: 15em;
+        }
+        input.pr-gallery-item-copyright {
+          width: 7em;
+        }
 
-      img.pr-gallery-image-preview {
-        width: 4em;
-        height: 2.2em;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: contain;
-        cursor: ns-resize;
+        button.pr-gallery-item-remove-undo {
+          height: 100%;
+          width: 4em;
+        }
       }
+    }
 
-      input.pr-gallery-image-title {
-        width: 15em;
-      }
-      input.pr-gallery-image-copyright {
-        width: 7em;
-      }
-
-      button.pr-gallery-image-remove-undo {
-        height: 100%;
-        width: 4em;
-      }
+    div input[type=file] {
+      width: 1px;
+      height: 1px;
+      position: absolute;
+      visibility: hidden;
     }
   }
 
-  div input[type=file] {
-    width: 1px;
-    height: 1px;
+  .pr-image-gallery-dialog-dimmed {
     position: absolute;
-    visibility: hidden;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: #eee;
+    opacity: 0.8;
+    z-index: 1001;
+    width: 100%;
+    height: 100%;
+  }
+
+  .pr-image-gallery-dialog-dimmed-text {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: transparent;
+    z-index: 1002;
+    width: 100%;
+    height: 100%;
+    display: table;
+    span {
+      display: table-cell;
+      vertical-align: middle;
+      text-align: center;
+      line-height: normal;
+      white-space: normal;
+    }
   }
 }
 
