--- a/profapp/templates/flashed-messages.html
+++ b/profapp/templates/flashed-messages.html
@@ -56,7 +56,7 @@
 </script>
 
 {#  TODO: MY BY OZ: #}
-<div ng-controller="message-controller" id="controller-message-controller" ng-cloak>
+<div ng-controller="message-controller" id="message-controller" ng-cloak>
     {% raw %}
     <div ng-repeat="alert in alerts" class="row">
         <div class="col-lg-offset-3 col-md-offset-3 col-lg-6 col-md-6 col-sm-10 col-xs-12 flash-message flash-message-{{ alert.type }}" >
